feat: darkmode works with daisyui

--- a/vite/src/css/index.css
+++ b/vite/src/css/index.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 
 @plugin "daisyui" {
-    themes: nord --default --prefersdark;
+    themes: light --default, dark --prefersdark;
 }
 
 @layer base {
