--- a/vite/src/css/index.css
+++ b/vite/src/css/index.css
@@ -14,3 +14,39 @@ body {
     touch-action: manipulation;
     overflow-x: hidden;
 }
+
+.leaflet-interactive:focus {
+    outline: none;
+}
+
+@layer base {
+    * {
+        scrollbar-width: thin;
+        scrollbar-color: rgba(100, 100, 100, 0.4) transparent;
+        @media (max-width: 640px) {
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+        }
+    }
+
+    *::-webkit-scrollbar {
+        width: 6px;
+        height: 6px;
+        @media (max-width: 640px) {
+            display: none;
+        }
+    }
+
+    *::-webkit-scrollbar-button {
+        display: none;
+    }
+
+    *::-webkit-scrollbar-thumb {
+        background-color: rgba(100, 100, 100, 0.4);
+        border-radius: 4px;
+    }
+
+    *::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+}
